--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,13 @@
     "@angular/router": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
     "@angular/upgrade": "2.0.0-rc.1",
+    "angular2-datatable": "^0.4.0",
     "angular2-in-memory-web-api": "0.0.7",
     "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
     "jquery": "^2.2.3",
+    "lodash": "^4.12.0",
+    "ng2-table": "^1.0.0-beta.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
