--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,10 @@
     "es6-shim": "^0.35.0",
     "jquery": "^2.2.3",
     "lodash": "^4.12.0",
+    "ng2-bs3-modal": "^0.6.0",
     "ng2-table": "^1.0.0-beta.0",
     "reflect-metadata": "^0.1.3",
+    "retyped-jqueryui-tsd-ambient": "^1.9.0-0",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
     "zone.js": "^0.6.12"
