--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -56,6 +56,14 @@
 			<version>1.3.3.RELEASE</version>
 		</dependency>
 
+		<!-- http://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+
+
 	</dependencies>
 	
 	<build>
