--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,13 @@
 			<version>2.6.2</version>
 		</dependency>
 
+		<!-- http://mvnrepository.com/artifact/com.twilio.sdk/twilio-java-sdk -->
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio-java-sdk</artifactId>
+			<version>7.0.0-rc-2</version>
+		</dependency>
+
 
 	</dependencies>
 	
