--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -70,6 +70,12 @@
 			<version>7.0.0-rc-2</version>
 		</dependency>
 
+		<!-- http://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 
 	</dependencies>
 	
